--- a/mail/themes/osx/mail/attachmentList.css
+++ b/mail/themes/osx/mail/attachmentList.css
@@ -7,7 +7,7 @@
 /* ::::: attachment list ::::: */
 
 .attachmentcell-icon {
-  padding: 1px;
+  margin: 1px;
   width: 16px;
   height: 16px;
 }
