--- a/mail/themes/windows/mail/attachmentList.css
+++ b/mail/themes/windows/mail/attachmentList.css
@@ -5,7 +5,9 @@
 /* styles for the attachment list */
 
 .attachmentcell-icon {
-  padding: 1px;
+  margin: 1px;
+  width: 16px;
+  height: 16px;
 }
 
 .attachmentcell-name,
